updated team name

--- a/overlord.yml
+++ b/overlord.yml
@@ -1,4 +1,4 @@
 tier: 4
-team: Back End Infrastructure
+team: backend-infrastructure
 slack_name: "#team-back-end-inf"
 slack_url: https://clio.slack.com/archives/CE15MGLFR
