added classification to overlord.yml

--- a/overlord.yml
+++ b/overlord.yml
@@ -1,4 +1,5 @@
 tier: 4
 team: backend-infrastructure
+classification: library
 slack_name: "#team-back-end-inf"
 slack_url: https://clio.slack.com/archives/CE15MGLFR
