--- a/overlord.yml
+++ b/overlord.yml
@@ -1,5 +1,4 @@
 tier: 4
 team: backend-infrastructure
 classification: library
-slack_name: "#team-back-end-inf"
-slack_url: https://clio.slack.com/archives/CE15MGLFR
+slack_name: "#help-back-end"
