--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: [3.1, 2.7.5, 2.1, 2.0, 1.9]
+        ruby-version: [3.1, 2.7.5, 2.2, 2.1.9, 2.0.0, 1.9.3]
 
     steps:
       - uses: actions/checkout@v2
