--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ["3.3", "3.2", "3.1", "3.0", "2.7", "2.6"]
+        ruby-version: ["3.4", "3.3", "3.2", "3.1", "3.0", "2.7", "2.6"]
 
     steps:
       - uses: actions/checkout@v2
