--- a/dev.yml
+++ b/dev.yml
@@ -1,4 +1,5 @@
-version: 1.1
+---
+version: "2.0"
 
 setup:
   ruby: 2.6.6
@@ -6,4 +7,5 @@ setup:
 
 commands:
   test:
-    - "bundle exec rspec spec"
+    summary: Run tests
+    command: bundle exec rspec spec
